CDN issue resolved and Distortion resolved

--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ h1:hover:after {
   box-shadow: 0 0 10px 2px rgba(26, 1, 253, 0.42);
 }
 .stylebox .image {
-  width: 20rem;
+  width: 18rem;
   height: 13rem;
 }
 .stylebox .image img {
@@ -101,16 +101,12 @@ h1:hover:after {
   transition: 0.2s;
   width: 100%;
 }
-.stylebox a.code {
+/* .stylebox a.code {
   background-color: rgb(47, 128, 0);
 }
 .stylebox a.code:hover {
   background-color: rgb(39, 105, 0);
-}
-a:hover {
-  background-color: rgb(44, 1, 65);
-  cursor: pointer;
-}
+} */
 
 @media only screen and (max-width: 600px) {
   .styles {
@@ -128,7 +124,7 @@ a:hover {
     margin-bottom: 1.5rem;
   }
   .stylebox .image {
-    width: 18rem;
+    width: 17rem;
     height: 12rem;
     border-radius: 0.5rem;
   }
@@ -158,69 +154,7 @@ a:hover {
 /* scroll top ends */
 
 /* CSS for NavBar starts */
-/* .topnav {
-  background-color: rgb(19, 24, 44);
-  overflow: hidden;
-}
 
-.topnav a {
-  float: left;
-  display: block;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-}
-
-.topnav a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-.topnav a.active {
-  background-color: #04aa6d;
-  color: white;
-}
-
-.topnav .icon {
-  display: none;
-}
-
-@media screen and (max-width: 600px) {
-  .topnav a:not(:first-child) {
-    display: none;
-  }
-  .topnav a.icon {
-    float: right;
-    display: block;
-  }
-}
-
-@media screen and (max-width: 600px) {
-  .topnav.responsive {
-    position: relative;
-  }
-  .topnav.responsive a.icon {
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-  .topnav.responsive a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
-} */
-
-/* * {
-  box-sizing: border-box;
-} */
-
-/* body {
-  margin: 0px;
-  font-family: 'segoe ui';
-} */
 a {
   text-decoration: none;
  }
@@ -228,13 +162,18 @@ a {
   list-style: none;
  }
 
+ ul{
+   margin-top: 1em;
+ }
+ 
  .navbar {
   display: flex;
   align-items: center;
   justify-content: space-evenly;
-  padding: 20px;
   background-color: #13182c;
   color: #fff;
+  box-shadow: none;
+  -webkit-box-shadow:none
  }
  .nav-links a {
   color: #fff;
@@ -250,19 +189,23 @@ a {
   font-family: 'Space Mono';
  }
 
- .menu li:hover {
-  background-color: #fff;
-  
-  transition: 0.3s ease;
- }
+ 
  a:hover{
    color: #1d1d1d;
+   background-color: #fff;
  }
 
  .menu li {
   padding: 5px 14px;
+  border-radius: 1em;
  }
 
+ .menu li:hover {
+  background-color: #fff;
+  border-radius: 1em;
+  transition: none;
+  box-shadow: 0 0 10px 2px rgba(26, 1, 253, 0.42);
+ }
  input[type=checkbox]{
   display: none;
  } 
@@ -271,6 +214,11 @@ a {
   display: none;
   font-size: 24px;
   user-select: none;
+ }
+ .nav-links{
+   display: flex;
+   justify-content: center;
+   align-items: center;
  }
 
 
